--- a/packages/geomingles_errors/errors_list.html
+++ b/packages/geomingles_errors/errors_list.html
@@ -1,15 +1,15 @@
-<template name="errors">
+<template name="meteorErrors">
 	<div class="errors">
 		{{#each errors}}
-			{{> error}}
-		{{/each}}
+			{{> meteorError}}
+		{{/each}}	
 	</div>
 </template>
 
 
-<template name="error">
+<template name="meteorError">
 	<div class="alert alert-danger" role="alert">
 		<button type="button" class="close" data-dismiss="alert">&times;</button>
-			{{message}}
+		{{message}}
 	</div>
 </template>
